# logic

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  and.cpp  and.hpp  atom.cpp  atom.hpp  atom_set.hpp  atomic_formula.cpp  atomic_formula.hpp  base_formula.hpp  binary_connective.hpp  cmake_install.cmake  constant.hpp  iff.cpp  iff.hpp  imp.cpp  imp.hpp  main.cpp  myApp  not.cpp  not.hpp  or.cpp  or.hpp  unary_connective.hpp  valuation.cpp  valuation.hpp
src/: and.hpp  atomic_formula.cpp  atomic_formula.hpp  base_formula.cpp  binary_connective.cpp  constant.cpp  imp.hpp  not.cpp  or.hpp  propositional_logic.hpp  unary_connective.cpp
